@@ -29,8 +29,9 @@ import java.awt.Rectangle;
 import java.awt.Toolkit;
 import javax.swing.UIManager;
 import java.io.File;
-import java.util.Enumeration;
-import java.util.Vector;
+import java.util.Set;
+import java.util.HashSet;
+
 import org.gjt.sp.util.Log;
 
 /**
@@ -45,7 +46,7 @@ public class OperatingSystem
 	/**
 	 * Returns the bounds of the default screen.
 	 */
-	public static final Rectangle getScreenBounds()
+	public static Rectangle getScreenBounds()
 	{
 		int screenX = (int)Toolkit.getDefaultToolkit().getScreenSize().getWidth();
 		int screenY = (int)Toolkit.getDefaultToolkit().getScreenSize().getHeight();
@@ -81,10 +82,10 @@ public class OperatingSystem
 	 * Returns the bounds of the (virtual) screen that the window should be in
 	 * @param window The bounds of the window to get the screen for
 	 */
-	public static final Rectangle getScreenBounds(Rectangle window)
+	public static Rectangle getScreenBounds(Rectangle window)
 	{
 		GraphicsDevice[] gd = GraphicsEnvironment.getLocalGraphicsEnvironment().getScreenDevices();
-		Vector intersects = new Vector();
+		Set<GraphicsConfiguration> intersects = new HashSet<GraphicsConfiguration>();
 
 		// Get available screens
 		// O(n^3), this is nasty, but since we aren't dealling with
@@ -96,23 +97,17 @@ public class OperatingSystem
 			// Don't add duplicates
 			if (window.intersects(gc.getBounds()))
 			{
-				for (Enumeration e = intersects.elements(); e.hasMoreElements();)
-				{
-					GraphicsConfiguration gcc = (GraphicsConfiguration)e.nextElement();
-					if (gcc.getBounds().equals(gc.getBounds()))
-						break;
-				}
-				intersects.add(gc);
+				if (!intersects.contains(gc))
+					intersects.add(gc);
 			}
 		}
 		
 		GraphicsConfiguration choice = null;
-		if (intersects.size() > 0)
+		if (!intersects.isEmpty())
 		{
 			// Pick screen with largest intersection
-			for (Enumeration e = intersects.elements(); e.hasMoreElements();)
+			for (GraphicsConfiguration gcc : intersects)
 			{
-				GraphicsConfiguration gcc = (GraphicsConfiguration)e.nextElement();
 				if (choice == null)
 					choice = gcc;
 				else
@@ -159,7 +154,7 @@ public class OperatingSystem
 	/**
 	 * Returns if we're running Windows 95/98/ME/NT/2000/XP, or OS/2.
 	 */
-	public static final boolean isDOSDerived()
+	public static boolean isDOSDerived()
 	{
 		return isWindows() || isOS2();
 	} //}}}
@@ -168,7 +163,7 @@ public class OperatingSystem
 	/**
 	 * Returns if we're running Windows 95/98/ME/NT/2000/XP.
 	 */
-	public static final boolean isWindows()
+	public static boolean isWindows()
 	{
 		return os == WINDOWS_9x || os == WINDOWS_NT;
 	} //}}}
@@ -177,7 +172,7 @@ public class OperatingSystem
 	/**
 	 * Returns if we're running Windows 95/98/ME.
 	 */
-	public static final boolean isWindows9x()
+	public static boolean isWindows9x()
 	{
 		return os == WINDOWS_9x;
 	} //}}}
@@ -186,7 +181,7 @@ public class OperatingSystem
 	/**
 	 * Returns if we're running Windows NT/2000/XP.
 	 */
-	public static final boolean isWindowsNT()
+	public static boolean isWindowsNT()
 	{
 		return os == WINDOWS_NT;
 	} //}}}
@@ -195,7 +190,7 @@ public class OperatingSystem
 	/**
 	 * Returns if we're running OS/2.
 	 */
-	public static final boolean isOS2()
+	public static boolean isOS2()
 	{
 		return os == OS2;
 	} //}}}
@@ -204,7 +199,7 @@ public class OperatingSystem
 	/**
 	 * Returns if we're running Unix (this includes MacOS X).
 	 */
-	public static final boolean isUnix()
+	public static boolean isUnix()
 	{
 		return os == UNIX || os == MAC_OS_X;
 	} //}}}
@@ -213,7 +208,7 @@ public class OperatingSystem
 	/**
 	 * Returns if we're running MacOS X.
 	 */
-	public static final boolean isMacOS()
+	public static boolean isMacOS()
 	{
 		return os == MAC_OS_X;
 	} //}}}
@@ -233,7 +228,7 @@ public class OperatingSystem
 	/**
 	 * Returns if we're running VMS.
 	 */
-	public static final boolean isVMS()
+	public static boolean isVMS()
 	{
 		return os == VMS;
 	} //}}}
@@ -242,9 +237,9 @@ public class OperatingSystem
 	/**
 	* Returns if we're running MacOS X and using the native look and feel.
 	*/
-	public static final boolean isMacOSLF()
+	public static boolean isMacOSLF()
 	{
-		return (isMacOS() && UIManager.getLookAndFeel().isNativeLookAndFeel());
+		return isMacOS() && UIManager.getLookAndFeel().isNativeLookAndFeel();
 	} //}}}
 
 	//{{{ hasScreenMenuBar() method
@@ -252,7 +247,7 @@ public class OperatingSystem
 	 * Returns whether the screen menu bar on Mac OS X is in use.
 	 * @since jEdit 4.2pre1
 	*/
-	public static final boolean hasScreenMenuBar()
+	public static boolean hasScreenMenuBar()
 	{
 		if(!isMacOS())
 			return false;
@@ -261,17 +256,18 @@ public class OperatingSystem
 			String result = System.getProperty("apple.laf.useScreenMenuBar");
 			if (result == null)
 				result = System.getProperty("com.apple.macos.useScreenMenuBar");
-			hasScreenMenuBar = ("true".equals(result)) ? 1 : 0;
+			hasScreenMenuBar = "true".equals(result) ? 1 : 0;
 		}
 
-		return (hasScreenMenuBar == 1);
+		return hasScreenMenuBar == 1;
 	} //}}}
 
-	//{{{ isJava14() method
+	//{{{ hasJava14() method
 	/**
 	 * Returns if Java 2 version 1.4, or Java 2 version 1.5 is in use.
 	 */
-	public static final boolean hasJava14()
+	@Deprecated
+	public static boolean hasJava14()
 	{
 		// jEdit 4.3 requires Java 1.4 or later. However, this method exists
 		// for two reasons. Compatibility with plugins for jEdit 4.2, and
@@ -279,13 +275,24 @@ public class OperatingSystem
 		return java14;
 	} //}}}
 
-	//{{{ isJava15() method
+	//{{{ hasJava15() method
 	/**
 	 * Returns if Java 2 version 1.5 is in use.
 	 */
-	public static final boolean hasJava15()
+	@Deprecated
+	public static boolean hasJava15()
 	{
 		return java15;
+	} //}}}
+
+	//{{{ hasJava16() method
+	/**
+	 * Returns if Java 2 version 1.6 is in use.
+	 * @since jEdit 4.3pre17
+	 */
+	public static boolean hasJava16()
+	{
+		return java16;
 	} //}}}
 
 	//{{{ isCaseInsensitiveFS() method
@@ -309,6 +316,7 @@ public class OperatingSystem
 	private static int os;
 	private static boolean java14;
 	private static boolean java15;
+	private static boolean java16;
 	private static int hasScreenMenuBar = -1;
 
 	//{{{ Class initializer
@@ -321,20 +329,20 @@ public class OperatingSystem
 		else
 		{
 			String osName = System.getProperty("os.name");
-			if(osName.indexOf("Windows 9") != -1
-				|| osName.indexOf("Windows M") != -1)
+			if(osName.contains("Windows 9")
+				|| osName.contains("Windows M"))
 			{
 				os = WINDOWS_9x;
 			}
-			else if(osName.indexOf("Windows") != -1)
+			else if(osName.contains("Windows"))
 			{
 				os = WINDOWS_NT;
 			}
-			else if(osName.indexOf("OS/2") != -1)
+			else if(osName.contains("OS/2"))
 			{
 				os = OS2;
 			}
-			else if(osName.indexOf("VMS") != -1)
+			else if(osName.contains("VMS"))
 			{
 				os = VMS;
 			}
@@ -353,10 +361,13 @@ public class OperatingSystem
 		// for debugging, make jEdit think its using a different
 		// version of Java than it really is.
 		String javaVersion = System.getProperty("jedit.force.java.version");
-		if(javaVersion == null || javaVersion.equals(""))
+		if(javaVersion == null || javaVersion.length() == 0)
 			javaVersion = System.getProperty("java.version");
-		java14 = (javaVersion.compareTo("1.4") >= 0);
-		java15 = (javaVersion.compareTo("1.5") >= 0);
+		if(javaVersion == null || javaVersion.length() == 0)
+			javaVersion = System.getProperty("java.runtime.version");
+		java14 = javaVersion.compareTo("1.4") >= 0;
+		java15 = javaVersion.compareTo("1.5") >= 0;
+		java16 = javaVersion.compareTo("1.6") >= 0;
 	} //}}}
 
 	//}}}
